2006-09-12  Kouichirou Eto  <2006@eto.com>

	* qwikgreen.css: Do not use MS P Gothic.

	* mock-sendmail.rb: Make sendmail system more general.

	* act-basic.rb (plg_window): Add class 'external'.

2006-09-10  NIIBE Yutaka  <gniibe@fsij.org>

	* debian/rules: Fix debin -> debian.

	* debian/changelog (0.8.4.3): Another trial to upload to Debian.

	* debian/docs (COPYING): Removed.
	* debian/copyright: Spell fix.  Refer common-licenses/GPL-2.
	* COPYRIGHT: Spell fix.

2006-09-08  NIIBE Yutaka  <gniibe@fsij.org>

	* debian/changelog (0.8.4.2): Another trial to upload to Debian.

	* debian/control (Tag): Removed.
	* debian/copyright: Clarified more.
	* debian/rules: Added +x bit.

2006-08-16  Kouichirou Eto  <2006@eto.com>

	* smtp-session.rb: New file.
	* ml-session.rb: Use the new class.
	
	* ml-sendmail.rb (Sendmail): Refactoring.

2006-08-07  Kouichirou Eto  <2006@eto.com>

       * lib/qwik/version.rb (VERSION): 0.8.4.1.
       (RELEASE_DATE): 20060807.

2006-08-07  Kouichirou Eto  <2006 eto.com>

	* Update debian/*.

2006-07-31  Kouichirou Eto  <2006 eto.com>

	* Add more details for Copyright notice.

2006-07-31  Kouichirou Eto  <2006 eto.com>

	* qwikWeb 0.8.4 is released.
	See NEWS for the Changes.

2006-07-30  Kouichirou Eto  <2006 eto.com>

	* Add more details for Copyright notice.

2006-07-27  Kouichirou Eto  <2006 eto.com>

	* Add Copyright notice.

2006-07-24  Kouichirou Eto  <2006 eto.com>

	* Reformat Copyright notice.

	* webdavhandler.rb: Deleted.

	* test-typekey.rb: Splited from typekey.rb

2006-07-22  Kouichirou Eto  <2006 eto.com>

	* qwikWeb 0.8.3 is released.
	See NEWS for the Changes.

2006-07-22  Kouichirou Eto  <2006 eto.com>

	* act-graphviz.rb: Deleted.
	* act-report.rb, act-secdb.rb, act-summary.rb, act-tagsearch.rb: Ditto.
	
2006-07-21  Kouichirou Eto  <2006 eto.com>

	* act-album.rb: Deleted.
	* act-takahashi.rb: Ditto.

2006-07-20  Kouichirou Eto  <2006 eto.com>

	* common-surface.rb: Add RSS Auto Discovery.
